--- a/exercicio01/style.css
+++ b/exercicio01/style.css
@@ -14,9 +14,9 @@ button{
     border-radius: 999px;
     font-size: 20px;
     border: 3px solid aquamarine;
+    transition: all 200ms linear;
 }
 button:hover{
     background-color: transparent;
     border: 3px solid aquamarine;
-    cursor: pointer;
-}
+    cursor: pointer; box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;
