--- a/sala07-tds/exercicio01/mediaStyle.css
+++ b/sala07-tds/exercicio01/mediaStyle.css
@@ -1,6 +1,97 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 .background{
-    background-image: url('./imagens/backgroundd.jpg');
+    background-image: url('./imagens/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    height: 100vh;
+    font-family: "Roboto", sans-serif;
+}
+
+.container{
+    background-color: rgba(255, 255, 255, 0.486);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 10px;
+    border: 3px solid #000000;
+    animation: top 2s linear;
+}
+
+@keyframes top{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+h1{
+    color: rgb(255, 255, 255);
+    font-size: 48px;
+    animation: bottom 1s linear;
+    font-family: "Bitcount Prop Single", system-ui;
+}
+
+@keyframes bottom{
+    0%{
+       transform: translate(-100px);
+       opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+label{
+    text-align: left;
+    width: 100%;
+    margin-bottom: -10px;
+    color: rgb(43, 61, 226);
+}
+
+input{
+    background-color: transparent;
+    border: none;
+    border-bottom: 3px solid ;
+    font-weight: bold;
+}
+
+input::placeholder{
+    color: black;
+    font-weight: lighter;
+}
+
+input:focus{
+    outline: none;
+}
+
+.btn{
+    padding: 10px;
+    border: none;
+    border: 3px solid rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
+    background: transparent;
+    transition: all 200ms ease-in-out;
+    border-radius: 10px;
+    width: 100%;
+}
+
+.btn:hover{
+    background: #fff;
+    cursor: pointer;
+    color: black;
 }
