--- a/sala07-tds/exercicio01/subStyle.css
+++ b/sala07-tds/exercicio01/subStyle.css
@@ -1,4 +1,25 @@
 .background{
     background-image: url('./imagens/soma.png');
-    
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    height: 100vh;
+    font-family: "Roboto", sans-serif;
+}
+.container{
+    background-color: rgba(255, 255, 255, 0.486);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 10px;
+    border: 3px solid #000000;
+    animation: top 2s linear;
 }
