--- a/landingPage/style.css
+++ b/landingPage/style.css
@@ -14,6 +14,7 @@ nav{
     gap: 20px;
     background-color: aliceblue;
     height: 80px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 nav a{
@@ -32,20 +33,24 @@ nav a:hover{
 #s1{
     min-height: 100vh;
     padding-top: 80px;
-    background-color: rgb(70, 43, 226);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-content: center;
+    gap: 20px;
 }
 #s2{
     min-height: 100vh;
     padding-top: 80px;
-    background-color: rgb(150, 43, 226);
+    background-color: rgb(239, 112, 73);
 }
 #s3{
     min-height: 100vh;
     padding-top: 80px;
-    background-color: rgb(226, 43, 189);
+    background-color: rgb(185, 56, 159);
 }
 #s4{
     min-height: 100vh;
     padding-top: 80px;
-    background-color: rgb(224, 43, 55);
+    background-color: rgb(77, 119, 216);
 }
